--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "loadash": "^1.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
@@ -41,10 +42,12 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.13",
     "@types/react": "^18.0.2",
     "@types/react-dom": "^18.0.2",
+    "@types/testing-library__react-hooks": "^4.0.0",
     "jest": "^27.5.1",
     "typescript": "^4.4.2"
   }
